--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "simple-ai-chat",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
